update: started implementing exercises json manipulation and template workout form

--- a/app/src/main/res/layout/dashboard_activty.xml
+++ b/app/src/main/res/layout/dashboard_activty.xml
@@ -39,5 +39,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/CreateWorkoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="659dp"
+        android:text="Create workout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
