--- a/app/src/main/res/layout/add_exercise.xml
+++ b/app/src/main/res/layout/add_exercise.xml
@@ -15,4 +15,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:id="@+id/chooseExercise"
+        android:layout_width="409dp"
+        android:layout_height="677dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goBackToWorkoutButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
