--- a/app/src/main/res/layout/workout_form.xml
+++ b/app/src/main/res/layout/workout_form.xml
@@ -22,4 +22,15 @@
         android:text="Add Exercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/showExercises"
+        android:layout_width="272dp"
+        android:layout_height="386dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="144dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
