--- a/app/src/main/res/layout/create_exercise.xml
+++ b/app/src/main/res/layout/create_exercise.xml
@@ -54,8 +54,8 @@
         android:id="@+id/exerciseMuscleGroups"
         android:layout_width="334dp"
         android:layout_height="67dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="292dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Involved muscle groups (one per line)"
@@ -70,6 +70,18 @@
         android:layout_marginStart="144dp"
         android:layout_marginTop="384dp"
         android:text="Add"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/exerciseCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="236dp"
+        android:ems="10"
+        android:hint="Category"
+        android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
