--- a/app/src/main/res/layout/activity_user_details_first.xml
+++ b/app/src/main/res/layout/activity_user_details_first.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="225dp"
-        android:layout_height="48dp"
+        android:layout_height="50dp"
         android:rotation="0"
         android:rotationX="0"
         android:text="@string/userFormInfo"
@@ -17,31 +17,45 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintVertical_bias="0.118" />
 
     <EditText
         android:id="@+id/weight"
-        android:layout_width="164dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="360dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="124dp"
         android:ems="10"
         android:hint="@string/weight"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/height"
-        android:layout_width="160dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="448dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="180dp"
         android:ems="10"
         android:hint="@string/height"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/date_picker_button"
+        style="?android:spinnerStyle"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="240dp"
+        android:text="@string/defaultDatePicker"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +63,7 @@
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="664dp"
+        android:layout_marginTop="672dp"
         android:text="@string/next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
