--- a/app/src/main/res/layout/add_exercise.xml
+++ b/app/src/main/res/layout/add_exercise.xml
@@ -17,10 +17,11 @@
 
     <ListView
         android:id="@+id/chooseExercise"
-        android:layout_width="409dp"
-        android:layout_height="677dp"
+        android:layout_width="0dp"
+        android:layout_height="650dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goBackToWorkoutButton" />
 
