added search users functionality

--- a/app/src/main/res/layout/activity_user_details_first.xml
+++ b/app/src/main/res/layout/activity_user_details_first.xml
@@ -33,6 +33,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/firstName"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="400dp"
+        android:ems="10"
+        android:hint="firstName"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/lastName"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="450dp"
+        android:ems="10"
+        android:hint="lastName"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
         android:id="@+id/height"
         android:layout_width="250dp"
         android:layout_height="50dp"
@@ -69,4 +95,5 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
